screen (4.2.1-3) UNRELEASED; urgency=medium

  * Change Vcs-Browser header to new cgit web interface.

 -- Axel Beckert <abe@debian.org>  Tue, 16 Sep 2014 01:09:07 +0200

screen (4.2.1-2) unstable; urgency=low

  * Upload to unstable again
  * Enable parallel building

 -- Axel Beckert <abe@debian.org>  Sat, 26 Jul 2014 14:05:20 +0200

screen (4.2.1-1) experimental; urgency=low

  * New upstream release

    Dropped patches applied or obsoleted upstream:
    + 01configure_fix_alpha_vsprintf.patch
    + 03-fix-terminal-handling-on-kfreebsd.patch
    + 05fix_osdef_include.patch
    + 06-fix-parallel-build.patch
    + 10norootpassword.patch
    + 12kfreebsd_ctty.patch
    + 14size_matters.patch
    + 16fix_gcc_warnings.patch
    + 22exchange_file_mode.patch
    + 23exitcode_q_ls.patch
    + 24option_parser.patch
    + 32misc_minor_fixes.patch
    + 46fix-keybinding-typo-in-manpage.patch
    + 47screen-cc.patch
    + 49long-usernames.patch
    + 50increase-max-TERM-length.patch
    + 51fix-utf8-status-padding-bug.patch
    + 53fix-startup-race-condition.patch
    + 59-fix-manpage-warnings.patch
    + 61-allow-dev-console-to-be-a-symlink.patch
    + 62-prevent-repeated-title-prompt.patch

    Also dropped patch 60-644788-screen-4.1.0-4.0.3-interoperability.patch
    as it was only necessary for the migration from Squeeze to Wheezy and
    from Precise to Trusty.

    Refreshed and/or updated the following remaining patches:
    + 11replace_doc_paths.patch
    + 48screen-ipv6.patch
    + 58-show-encoding-hardstatus.patch
    + 80EXP_session_creation_time.patch

    New patches:
    + Fix wrong version in upstream's top-level Makefile.
    + Set values in os.h to those from 49long-usernames and
      50increase-max-TERM-length and set MSG_VERSION back to 2 to ensure
      backwards compatibility in Debian. (See #644788 for the discussion
      with older releases.)

  * Update line-numbers in lintian overrides.